After this commit still remaining: 1) GUI & flows for Customer, 2) Closing an account, 3) No money exception 4) Javadoc on interfaces 5) Testing

--- a/src/main/resources/templates/accounts/account-form.html
+++ b/src/main/resources/templates/accounts/account-form.html
@@ -36,16 +36,22 @@
           th:object="${account}" method="POST">
 
         Customer Id:
-        <input type="text" th:field="*{customer_id}"
-               class="form-control mb-4 col-4"/>
+        <select th:field="*{customer_id}" class="form-control mb-4 col-4">
+            <option th:each="customer : ${customers}"
+                    th:value="${customer.id}"
+                    th:text="${customer.id}" />
+        </select>
 
         IBAN:
         <input type="text" th:field="*{iban}"
                class="form-control mb-4 col-4"/>
 
         Currency:
-        <input type="text" th:field="*{currency}"
-               class="form-control mb-4 col-4"/>
+        <select th:field="*{currency}" class="form-control mb-4 col-4">
+            <option th:value="RON" th:text="RON"></option>
+            <option th:value="EUR" th:text="EUR"></option>
+            <option th:value="USD" th:text="USD"></option>
+        </select>
 
         <button type="submit" class="btn btn-info col-2">Save</button>
 
