--- a/src/main/resources/templates/transactions/list-transactions-by-account-id.html
+++ b/src/main/resources/templates/transactions/list-transactions-by-account-id.html
@@ -39,6 +39,8 @@
 
 <!--    <input type="text" th:field="*{name}"-->
 <!--           class="form-control mb-4 col-4" placeholder="Transactions after this DateTime">-->
+<!--    <p>Start Date Field: <input type="datetime-local" th:field="*{datetimeField}" /></p>-->
+<!--    <p>End Date Field: <input type="datetime-local" th:field="*{datetimeField}" /></p>-->
 
     <table class="table table-bordered table-striped">
         <thead class="thead-dark">
