--- a/src/main/resources/templates/transactions/transaction-form.html
+++ b/src/main/resources/templates/transactions/transaction-form.html
@@ -36,8 +36,11 @@
           th:object="${transaction}" method="POST">
 
         Account Id:
-        <input type="text" th:field="*{accountId}"
-               class="form-control mb-4 col-4"/>
+        <select th:field="*{accountId}" class="form-control mb-4 col-4">
+            <option th:each="account : ${accounts}"
+                    th:value="${account.id}"
+                    th:text="${account.id}" />
+        </select>
 
         Details:
         <input type="text" th:field="*{transactionDetails}"
