--- a/src/main/resources/templates/accounts/list-accounts.html
+++ b/src/main/resources/templates/accounts/list-accounts.html
@@ -55,16 +55,6 @@
             <td th:text="${account.iban}" class="text-center"/>
             <td th:text="${account.currency}" class="text-center"/>
 
-
-            <td>
-                <!-- 					Add "delete" button/link					 -->
-                <a th:href="@{/accounts/delete(id=${account.id})}"
-                   class="btn btn-danger btn-sm"
-                   onclick="if (!(confirm('Are you sure you want to delete this account?'))) return false">
-                    Delete
-                </a>
-            </td>
-
             <td>
                 <a th:href="@{/transactions/account/(id=${account.id})}"
                    class="btn btn-primary btn-sm">
@@ -72,6 +62,14 @@
                 </a>
             </td>
 
+            <td>
+                <!-- 					Add "delete" button/link					 -->
+                <a th:href="@{/accounts/close(id=${account.id})}"
+                   class="btn btn-danger btn-sm"
+                   onclick="if (!(confirm('Are you sure you want to close this account?'))) return false">
+                   Close account
+                </a>
+            </td>
         </tr>
 
         </tbody>
