--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
           integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-    <title>Staff</title>
+    <title>Main</title>
 </head>
 
 <body>
 
 <div class="container mt-5">
 
-    <h3>Staff</h3>
+    <h3>Main</h3>
     <div sec:authorize="isAuthenticated()">
         User: <span th:text="${#authentication.getPrincipal().getUsername()}"></span>
         <span th:text="${#authentication.getPrincipal().authorities}"></span>
@@ -29,15 +29,8 @@
     <hr>
 
     <ul>
+        <li><a th:href="@{/customers}">Customer List</a></li>
         <li><a th:href="@{/accounts}">Account List</a></li>
-        <li><a th:href="@{/accounts/showFormForAdd}">Create Account</a></li>
-<!--        <li><a th:href="@{/accounts/list-accounts-by-customer-id}">List Accounts by Customer ID</a></li>-->
-<!--        <li><a th:href="@{/users/list}">Appointment List</a></li>-->
-<!--        <li><a th:href="@{/users/showFormForAdd}">Add Appointment</a></li>-->
-<!--        <li><a th:href="@{/users/list-by-priority/single/1}">Users by Priority</a></li>-->
-<!--        <li><a th:href="@{/users/list-age-over-65}">Users With Age Over 65</a></li>-->
-<!--        <li><a th:href="@{/users/list-users-that-will-be-vaccinated}">Users That Will Be Vaccinated</a></li>-->
-<!--        <li><a th:href="@{/users/list-users-that-were-vaccinated}">Users That Were Vaccinated</a></li>-->
     </ul>
 </div>
 
